--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 
   "dependencies": {
     "coffee-script": "~1.6",
-    "html-to-text": "1.1.0"
+    "html-to-text": "1.2.0",
+    "dateformat": "1.0.11"
   },
 
   "devDependencies": {
