--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "coffee-script": "~1.6",
     "html-to-text": "1.2.0",
-    "dateformat": "1.0.11",
-    "nextflow": "0.3.0"
+    "dateformat": "1.0.11"
   },
 
   "devDependencies": {
