--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-basecamp",
   "description": "Expands Basecamp URLs with more useful information.",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "author": "Ivan Stegic <ivan.stegic@gmail.com>",
   "license": "MIT",
 
@@ -19,7 +19,8 @@
   "dependencies": {
     "coffee-script": "~1.6",
     "html-to-text": "1.2.0",
-    "dateformat": "1.0.11"
+    "dateformat": "1.0.11",
+    "hubot-redis-brain": "0.0.2"
   },
 
   "devDependencies": {
